<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@id/home_bar" android:layout_width="fill_parent" android:layout_height="24.0dip" android:layout_below="@id/featurebar_warp">
        <TextView android:textSize="16.0sp" android:textStyle="bold" android:textColor="@color/dm_white" android:gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/dm_home" android:layout_alignParentLeft="true" />
    </RelativeLayout>
    <RelativeLayout android:id="@id/profile_layout" android:background="@color/dm_frame1" android:layout_width="fill_parent" android:layout_height="60.0dip" android:layout_marginTop="3.0dip" android:layout_below="@id/home_bar">
        <ImageView android:id="@id/my_headimage" android:background="@drawable/dm_head_icon_1" android:layout_width="48.0dip" android:layout_height="48.0dip" android:layout_marginLeft="16.0dip" android:layout_marginTop="5.0dip" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" />
        <TextView android:textSize="16.0sp" android:textColor="@color/dm_gray" android:gravity="left" android:id="@id/username_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="6.0dip" android:text="@string/dm_username" android:layout_toRightOf="@id/my_headimage" android:layout_alignParentTop="true" />
        <RelativeLayout android:id="@id/level_wrap" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginRight="16.0dip" android:layout_below="@id/username_text" android:layout_alignLeft="@id/username_text" android:layout_alignParentRight="true">
            <TextView android:textSize="12.0sp" android:textColor="@color/dm_gray" android:gravity="left" android:id="@id/level_text" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            <LinearLayout android:gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentRight="true">
                <ImageView android:background="@drawable/dm_topbar_icon" android:layout_width="14.0dip" android:layout_height="12.0dip" />
                <TextView android:textSize="12.0sp" android:textColor="@color/dm_gray" android:id="@id/xp_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="4.0dip" android:layout_toRightOf="@id/username_text" android:layout_centerVertical="true" />
            </LinearLayout>
        </RelativeLayout>
        <ProgressBar android:id="@id/level_progressbar" android:layout_width="wrap_content" android:layout_height="7.0dip" android:layout_marginTop="1.0dip" android:layout_below="@id/level_wrap" android:layout_alignLeft="@id/level_wrap" android:layout_alignRight="@id/level_wrap" style="@style/DM_PROGRESSBAR" />
    </RelativeLayout>
    <RelativeLayout android:id="@id/manageraccount_bar" android:background="@color/dm_drak_blue" android:layout_width="fill_parent" android:layout_height="24.0dip" android:layout_below="@id/profile_layout">
        <TextView android:textSize="16.0sp" android:textStyle="bold" android:textColor="@color/dm_white" android:gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/dm_manageraccount" android:layout_alignParentLeft="true" />
    </RelativeLayout>
    <RelativeLayout android:id="@id/about_dm" android:background="@color/dm_frame1" android:layout_width="fill_parent" android:layout_height="42.0dip" android:layout_alignParentBottom="true">
        <RelativeLayout android:id="@id/about_dm_icon" android:layout_width="wrap_content" android:layout_height="42.0dip">
            <ImageView android:background="@drawable/dm_topbar_icon" android:layout_width="32.0dip" android:layout_height="32.0dip" android:layout_marginLeft="16.0dip" android:scaleType="center" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
        </RelativeLayout>
        <RelativeLayout android:id="@id/about_dm_text" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_toRightOf="@id/about_dm_icon" android:layout_centerVertical="true">
            <TextView android:textSize="14.0sp" android:textStyle="bold" android:textColor="@color/dm_gray" android:id="@id/about_dm_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/dm_love_doodle_mobile" android:layout_alignParentLeft="true" />
            <TextView android:textSize="12.0sp" android:textColor="@color/dm_gray" android:id="@id/about_dm_desc" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="0.0dip" android:text="@string/dm_get_start" android:layout_below="@id/about_dm_title" android:layout_alignLeft="@id/about_dm_title" />
        </RelativeLayout>
    </RelativeLayout>
    <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_above="@id/about_dm" android:layout_below="@id/manageraccount_bar">
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent">
            <com.doodlemobile.gamecenter.facebook.LoginLayout android:id="@id/facebook_friend" android:background="@color/dm_frame2" android:layout_width="fill_parent" android:layout_height="42.0dip" android:layout_below="@id/manageraccount_bar">
                <ImageView android:id="@id/facebook_friend_icon" android:background="@drawable/dm_icon_facebook" android:layout_width="38.0dip" android:layout_height="30.0dip" android:layout_marginLeft="16.0dip" android:scaleType="center" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
                <ImageView android:id="@id/facebook_button_icon" android:background="@drawable/dm_button_facebook" android:layout_width="119.0dip" android:layout_height="20.0dip" android:layout_marginLeft="15.0dip" android:scaleType="center" android:layout_toRightOf="@id/facebook_friend_icon" android:layout_centerVertical="true" />
            </com.doodlemobile.gamecenter.facebook.LoginLayout>
            <RelativeLayout android:id="@id/change_usericon" android:background="@color/dm_frame1" android:layout_width="fill_parent" android:layout_height="42.0dip" android:layout_below="@id/facebook_friend">
                <RelativeLayout android:id="@id/change_usericon_icon_wrap" android:layout_width="wrap_content" android:layout_height="42.0dip">
                    <ImageView android:id="@id/change_usericon_icon" android:background="@drawable/dm_head_icon_2" android:layout_width="32.0dip" android:layout_height="32.0dip" android:layout_marginLeft="16.0dip" android:scaleType="center" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
                </RelativeLayout>
                <RelativeLayout android:id="@id/change_usericon_text" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_toRightOf="@id/change_usericon_icon_wrap" android:layout_centerVertical="true">
                    <TextView android:textSize="14.0sp" android:textStyle="bold" android:textColor="@color/dm_gray" android:id="@id/change_usericon_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/dm_change_icon" android:layout_alignParentLeft="true" />
                    <TextView android:textSize="12.0sp" android:textColor="@color/dm_gray" android:id="@id/change_usericon_desc" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="0.0dip" android:text="@string/dm_choose_from_device" android:layout_below="@id/change_usericon_title" android:layout_alignLeft="@id/change_usericon_title" />
                </RelativeLayout>
            </RelativeLayout>
            <RelativeLayout android:id="@id/change_username" android:background="@color/dm_frame2" android:layout_width="fill_parent" android:layout_height="42.0dip" android:layout_below="@id/change_usericon">
                <RelativeLayout android:id="@id/change_username_icon" android:layout_width="wrap_content" android:layout_height="42.0dip">
                    <ImageView android:background="@drawable/dm_head_icon_2" android:layout_width="32.0dip" android:layout_height="32.0dip" android:layout_marginLeft="16.0dip" android:scaleType="center" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
                </RelativeLayout>
                <RelativeLayout android:id="@id/change_username_text" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_toRightOf="@id/change_username_icon" android:layout_centerVertical="true">
                    <TextView android:textSize="14.0sp" android:textStyle="bold" android:textColor="@color/dm_gray" android:id="@id/change_username_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/dm_change_username" android:layout_alignParentLeft="true" />
                    <TextView android:textSize="12.0sp" android:textColor="@color/dm_gray" android:id="@id/change_username_desc" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="0.0dip" android:layout_below="@id/change_username_title" android:layout_alignLeft="@id/change_username_title" />
                </RelativeLayout>
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>